--- a/style.css
+++ b/style.css
@@ -137,7 +137,7 @@ section {
     position: relative;
     height: 100vh;
     width: 100%;
-    background-image: url("images/bg.jpg");
+    background-image: url("images/home.jpg");
     background-size: cover;
     background-position: bottom center;
     display: flex;
