--- a/style.css
+++ b/style.css
@@ -683,6 +683,20 @@ html {
         padding: 7px 5%;
     }
 
+    .button
+    {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 4px;
+        cursor: pointer;
+        display: inline-block;
+        width: 100px;
+        padding: 10px;
+        font-size: 12px;
+        transition: all .5s;
+    }
+
 }
 
 
